[package]
authors = ["Douglas Yau <dy@coradoya.com>"]
build = "build.rs"
description = "Bindings for charls"
edition = "2021"
keywords = ["charls", "libcharls", "image", "jpegls"]
homepage = "https://github.com/coradoya/charls-sys"
repository = "https://github.com/coradoya/charls-sys"
license = "MIT"
links = "charls"
name = "charls-sys"
readme = "README.md"
version = "2.4.3"
include = [
    "LICENSE.md",
    "README.md",
    "build.rs",
    "wrapper.h",
    "src",
    "charls/LICENSE.md",
    "charls/CMakeLists.txt",
    "charls/CMakePresets.json",
    "charls/CharLS.sln",
    "charls/CharLS.sln.properties",
    "charls/include",
    "charls/src",
]

[dependencies]

[build-dependencies]
cmake = "0.1"

[features]
default = []
static = []
